# jlibclang

./: .gitignore  LICENSE  README.md  pom.xml
src/jni/: CMakeLists.txt  JObjectWrapper.cpp  JObjectWrapper.h  debug.sh  gen_enums.cpp  install.sh  jni_cursor.cpp  jni_cursor.h  jni_index.cpp  jni_index.h  jni_libclang.cpp  jni_translate_unit.cpp  jni_translate_unit.h  jni_utils.cpp  jni_utils.h  main.cpp  test.cpp  test.h
src/main/java/jlibclang/: CXClientData.java  CXCursor.java  CXCursorKind.java  CXCursorVisitor.java  CXIndex.java  CXTranslationUnit.java  CXTranslationUnit_Flags.java  CXUnsavedFile.java  LibClang.java
src/main/java/test/: ClangTest.java  ClangTestBase.java
